# mms2-menu_system

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-linux.yml  build-windows.yml
cmake/: any_config.cmake  concat.cmake  dynlibutils.cmake  entity_manager.cmake  gamedata.cmake  logger.cmake  metamod.cmake  sourcesdk.cmake  translations.cmake
cmake/platform/: shared.cmake
configs/: languages.json
configs/menu/chatsystem/: aliases.json
configs/menu/system/: fonts.json  profiles.json
gamedata/: baseentity.games.json  baseplayerpawn.games.json  usercmd.games.json
include/: concat.hpp  globals.hpp  math.hpp  menu.hpp  menu_plugin.hpp  menu_system_plugin.hpp  menuallocator.hpp  menusystem_plugin.hpp
include/menu/: chat_command_system.hpp  chatcommandsystem.hpp  chatsystem.hpp  game_event_system.hpp  gameeventmanager2system.hpp  gameeventsystem.hpp  path_resolver.hpp  pathresolver.hpp  profile.hpp  profilesystem.hpp  provider.hpp  schema.hpp  system.hpp  system_base.hpp  systembase.hpp  utils.hpp
include/menu/provider/: csgousercmd.hpp
include/menu/schema/: base_entity.hpp  base_model_entity.hpp  base_player_controller.hpp  base_player_pawn.hpp  base_view_model.hpp  baseentity.hpp  basemodelentity.hpp  baseplayercontroller.hpp  baseplayerpawn.hpp  baseplayerweapon.hpp  baseplayerweaponvdata.hpp  baseviewmodel.hpp  body_component.hpp  bodycomponent.hpp  cs_player_base_camera_services.hpp  cs_player_pawn_base.hpp  cs_player_view_model_services.hpp  csobserverpawn.hpp  csplayer_viewmodelservices.hpp  csplayerbase_cameraservices.hpp  csplayerpawn.hpp  csplayerpawnbase.hpp  csweaponbasevdata.hpp  game_scene_node.hpp  gamescenenode.hpp  player_observerservices.hpp  player_weaponservices.hpp  pointworldtext.hpp
include/menu/system/: profiles.hpp
include/menu_system/: chat_command_system.hpp  provider.hpp  schema.hpp
include/menu_system/schema/: base_entity.hpp  base_model_entity.hpp  base_player_controller.hpp  base_player_pawn.hpp  base_view_model.hpp  body_component.hpp  cs_player_base_camera_services.hpp  cs_player_pawn_base.hpp  cs_player_view_model_services.hpp  game_scene_node.hpp
public/: imenu.hpp  imenuhandler.hpp  imenuinstance.hpp  imenuprofile.hpp  imenuprofiles.hpp  imenuprofilesystem.hpp  imenusystem.hpp  menusystem_exports.h  pymenu.hpp
public/imenu/: isample.hpp
public/imenuprofiles/: macros.hpp
public/imenusystem/: isample.hpp
src/: concat.cpp  concatglobals.cpp  globals.cpp  math.cpp  menu.cpp  menu_plugin.cpp  menu_system_plugin.cpp  menusystem_exports.cpp  menusystem_plugin.cpp  pymenu.cpp
src/menu/: chat_command_system.cpp  chatcommandsystem.cpp  chatsystem.cpp  game_event_system.cpp  gameeventmanager2system.cpp  gameeventsystem.cpp  instance.cpp  language.cpp  path_resolver.cpp  pathresolver.cpp  player.cpp  profile.cpp  profilesystem.cpp  provider.cpp  schema.cpp
src/menu/provider/gamedata/: baseentity.cpp  baseplayerpawn.cpp  gameresource.cpp  gamesystem.cpp  source2server.cpp  usercmd.cpp
src/menu/schema/: base_entity.cpp  base_model_entity.cpp  base_player_controller.cpp  base_view_model.cpp  baseentity.cpp  basemodelentity.cpp  baseplayercontroller.cpp  baseplayerpawn.cpp  baseplayerweapon.cpp  baseplayerweaponvdata.cpp  baseviewmodel.cpp  body_component.cpp  bodycomponent.cpp  cs_player_base_camera_services.cpp  cs_player_pawn_base.cpp  cs_player_view_model_services.cpp  csobserverpawn.cpp  csplayer_viewmodelservices.cpp  csplayerbase_cameraservices.cpp  csplayerpawn.cpp  csplayerpawnbase.cpp  csweaponbasevdata.cpp  game_scene_node.cpp  gamescenenode.cpp  player_observerservices.cpp  player_weaponservices.cpp  pointworldtext.cpp
src/menu/system/: profiles.cpp
src/menu_system/: chat_command_system.cpp  language.cpp  player.cpp  player_base.cpp  provider.cpp  schema.cpp
src/menu_system/provider/gamedata/: baseentity.cpp  baseplayerpawn.cpp  gameresource.cpp  gamesystem.cpp  source2server.cpp
src/menu_system/schema/: base_entity.cpp  base_model_entity.cpp  base_player_controller.cpp  base_view_model.cpp  body_component.cpp  cs_player_base_camera_services.cpp  cs_player_pawn_base.cpp  cs_player_view_model_services.cpp  game_scene_node.cpp
sym/: version_script.lds
translations/: core.phrases.txt  sample.phrases.json
translations/ar/: core.phrases.txt
translations/bg/: core.phrases.txt
translations/chi/: core.phrases.txt
translations/cze/: core.phrases.txt
translations/da/: core.phrases.txt
translations/de/: core.phrases.txt
translations/el/: core.phrases.txt
translations/es/: core.phrases.txt
translations/fi/: core.phrases.txt
translations/fr/: core.phrases.txt
translations/he/: core.phrases.txt
translations/hu/: core.phrases.txt
translations/it/: core.phrases.txt
translations/jp/: core.phrases.txt
translations/ko/: core.phrases.txt
translations/las/: core.phrases.txt
translations/lt/: core.phrases.txt
translations/lv/: core.phrases.txt
translations/nl/: core.phrases.txt
translations/pl/: core.phrases.txt
translations/pt/: core.phrases.txt
translations/pt_p/: core.phrases.txt
translations/ro/: core.phrases.txt
translations/ru/: core.phrases.txt
translations/sk/: core.phrases.txt
translations/sv/: core.phrases.txt
translations/tr/: core.phrases.txt
translations/ua/: core.phrases.txt
translations/vi/: core.phrases.txt
translations/zho/: core.phrases.txt
